openshift/network-policies/allow-from-openshift-ingress.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-openshift-ingress
  # replace it with proper value
  namespace: licenseplate-env
  labels:
    template: quickstart-network-security-policy
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
  policyTypes:
    - Ingress
