openshift/network-policies/allow-same-namespace.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:

  name: allow-same-namespace
  namespace: licenseplate-env
  labels:
    template: quickstart-network-security-policy
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environment: env
              name: licenseplate
  policyTypes:
    - Ingress
