openshift/network-policies/deny-by-default.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-by-default

  namespace: licenseplate-env
  labels:
    template: quickstart-network-security-policy
spec:
  podSelector: {}
  policyTypes:
    - Ingress
